# hls-debug-20210102

./: LICENSE  README.md  hie.yaml  hls-debug.cabal
src/: Lib.hs  Main.hs
