name:                hls-debug
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ishiy1993/hls-debug#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           ishiy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     greeting.txt

executable hls-debug
  hs-source-dirs:      src
  other-modules:       Lib
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , text
